# webhook-faucet

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
bench/: attack.sh  load-testing.md  loadtest  request.json
ops/: redis.conf  supervisor.conf  supervisor.sh
src/: lib.rs
src/adapter/: kafka.rs
src/app/: mod.rs
src/common/: compde.rs  consts.rs  crypt.rs  mod.rs
src/config/: mod.rs
src/http/router/: mod.rs  redirect.rs  webhook.rs
src/model/: error.rs  mod.rs
src/services/: bg_kafka_worker_ext.rs  bg_worker_ext.rs  congestion_control.rs  i_wh_req_handler.rs  mod.rs  wh_req_handler.rs
