cargo-features = ["edition2024"]
[package]
name = "webhook-svc"
version = "0.1.0"
edition = "2024"
description = "webhook service to handle Shopify events for Omega app"

[lib]
name = "webhook_svc"
path = "src/lib.rs"

[[bin]]
name = "request-receiver"
path = "src/bin/requests_receiver.rs"

[[bin]]
name = "downstreamer"
path = "src/bin/downstreamer.rs"

[dependencies]
axum = { version = "0.7.5", features = [ "macros" ]}
chrono = "0.4"
futures = "0.3"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
ring = { version = "0.17.8", features = ["std"] }
data-encoding = { version = "2.5.0" }
http = "1"
# serde_json = { version = "1.0" }
bitcode = { version = "0.6.0", features = ["serde"] }
# brotli = { version = "3.5.0", features = ["std", "ffi-api", "simd"] }
zstd = { version = "0.13.1" }
http-serde = "2.0"
serde-inline-default = { version = "0.2" }
redis = { version = "0.25.2", features = ["tokio-comp", "json"] }
# sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio-native-tls", "time", "uuid"] }
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7" }
tower = { version = "0.4", features = ["tracing"] }
tower-http = { version = "0.5", features = ["fs", "trace", "compression-full", "normalize-path"] }
lockfile = { version = "0.4.0" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry","env-filter"] }
dotenvy = "0.15"
envy = "0.4"
once_cell = "1.13.0"
anyhow ={ version = "1.0.58", features = [ "backtrace" ] }
thiserror = "1.0.31"
